LPS-148218 ant build-lib-versions

--- a/lib/versions.html
+++ b/lib/versions.html
@@ -387,6 +387,11 @@
 </td><td></td>
 </tr>
 <tr>
+<td nowrap="nowrap">com.liferay.commerce.shipping.engine.fedex.jar!commons-discovery.jar</td><td nowrap="nowrap">0.4</td><td nowrap="nowrap"><a href="http://jakarta.apache.org/commons/${pom.artifactId.substring(8)}/">org.apache.commons.discovery</a></td><td nowrap><a href="/LICENSE.txt">The Apache Software License, Version 2.0</a>
+<br>
+</td><td></td>
+</tr>
+<tr>
 <td nowrap="nowrap">com.liferay.commerce.shipping.engine.fedex.jar!org.apache.axis.jar</td><td nowrap="nowrap">1.4.LIFERAY-PATCHED-6</td><td nowrap="nowrap">org.apache.axis</td><td nowrap><a href="http://www.gnu.org/licenses/old-licenses/lgpl-2.1.txt">LGPL 2.1</a>
 <br>
 </td><td></td>
@@ -1357,7 +1362,7 @@
 </td><td></td>
 </tr>
 <tr>
-<td nowrap="nowrap">com.liferay.portal.search.elasticsearch7.impl.jar!jackson-dataformat-cbor.jar</td><td nowrap="nowrap">2.10.4</td><td nowrap="nowrap"><a href="http://github.com/FasterXML/jackson-dataformats-binary">Jackson dataformat: CBOR</a></td><td nowrap><a href="http://www.apache.org/licenses/LICENSE-2.0.txt">The Apache Software License, Version 2.0</a>
+<td nowrap="nowrap">com.liferay.portal.search.elasticsearch7.impl.jar!jackson-dataformat-cbor.jar</td><td nowrap="nowrap">2.12.6</td><td nowrap="nowrap"><a href="http://github.com/FasterXML/jackson-dataformats-binary">Jackson dataformat: CBOR</a></td><td nowrap><a href="http://www.apache.org/licenses/LICENSE-2.0.txt">The Apache Software License, Version 2.0</a>
 <br>
 </td><td></td>
 </tr>
@@ -1807,7 +1812,7 @@
 </td><td></td>
 </tr>
 <tr>
-<td nowrap="nowrap">com.liferay.portal.store.s3.jar!jackson-dataformat-cbor.jar</td><td nowrap="nowrap">2.12.1</td><td nowrap="nowrap"><a href="http://github.com/FasterXML/jackson-dataformats-binary">Jackson dataformat: CBOR</a></td><td nowrap><a href="http://www.apache.org/licenses/LICENSE-2.0.txt">The Apache Software License, Version 2.0</a>
+<td nowrap="nowrap">com.liferay.portal.store.s3.jar!jackson-dataformat-cbor.jar</td><td nowrap="nowrap">2.12.6</td><td nowrap="nowrap"><a href="http://github.com/FasterXML/jackson-dataformats-binary">Jackson dataformat: CBOR</a></td><td nowrap><a href="http://www.apache.org/licenses/LICENSE-2.0.txt">The Apache Software License, Version 2.0</a>
 <br>
 </td><td></td>
 </tr>
@@ -1828,6 +1833,36 @@
 </tr>
 <tr>
 <td nowrap="nowrap">com.liferay.portal.template.velocity.jar!velocity-tools.jar</td><td nowrap="nowrap">1.4</td><td nowrap="nowrap">org.apache.velocity</td><td nowrap><a href="https://www.apache.org/licenses/LICENSE-2.0">Apache License, Version 2.0</a>
+<br>
+</td><td></td>
+</tr>
+<tr>
+<td nowrap="nowrap">com.liferay.portal.tika.jar!commons-lang3.jar</td><td nowrap="nowrap">3.12.0</td><td nowrap="nowrap"><a href="https://commons.apache.org/proper/commons-lang/">Apache Commons Lang</a></td><td nowrap><a href="https://www.apache.org/licenses/LICENSE-2.0.txt">Apache License, Version 2.0</a>
+<br>
+</td><td></td>
+</tr>
+<tr>
+<td nowrap="nowrap">com.liferay.portal.tika.jar!jmatio.jar</td><td nowrap="nowrap">1.2</td><td nowrap="nowrap"><a href="https://github.com/tballison/jmatio">JMatIO</a></td><td nowrap><a href="http://www.linfo.org/bsdlicense.html">BSD</a>
+<br>
+</td><td></td>
+</tr>
+<tr>
+<td nowrap="nowrap">com.liferay.portal.tika.jar!org.gagravarr.tika.jar</td><td nowrap="nowrap">0.8.LIFERAY-PATCHED-1</td><td nowrap="nowrap">org.gagravarr.tika</td><td nowrap><a href="http://www.gnu.org/licenses/old-licenses/lgpl-2.1.txt">LGPL 2.1</a>
+<br>
+</td><td></td>
+</tr>
+<tr>
+<td nowrap="nowrap">com.liferay.portal.tika.jar!tika-core.jar</td><td nowrap="nowrap">1.26</td><td nowrap="nowrap"><a href="http://tika.apache.org/">Apache Tika core</a></td><td nowrap><a href="http://www.apache.org/licenses/LICENSE-2.0.txt">Apache License, Version 2.0</a>
+<br>
+</td><td></td>
+</tr>
+<tr>
+<td nowrap="nowrap">com.liferay.portal.tika.jar!tika-parsers.jar</td><td nowrap="nowrap">1.26</td><td nowrap="nowrap"><a href="http://tika.apache.org/">Apache Tika parsers</a></td><td nowrap><a href="http://www.apache.org/licenses/LICENSE-2.0.txt">Apache License, Version 2.0</a>
+<br>
+</td><td></td>
+</tr>
+<tr>
+<td nowrap="nowrap">com.liferay.portal.tika.jar!vorbis-java-core.jar</td><td nowrap="nowrap">0.8</td><td nowrap="nowrap"><a href="https://github.com/Gagravarr/VorbisJava">Ogg and Vorbis for Java, Core</a></td><td nowrap><a href="http://www.apache.org/licenses/LICENSE-2.0.txt">The Apache Software License, Version 2.0</a>
 <br>
 </td><td></td>
 </tr>
