LPS-148287 ant build-lib-versions

--- a/lib/versions.html
+++ b/lib/versions.html
@@ -1837,6 +1837,16 @@
 </td><td></td>
 </tr>
 <tr>
+<td nowrap="nowrap">com.liferay.portal.tika.jar!apache-mime4j-core.jar</td><td nowrap="nowrap">0.8.3</td><td nowrap="nowrap"><a href="https://www.apache.org/">Apache James :: Mime4j :: Core</a></td><td nowrap><a href="https://www.apache.org/licenses/LICENSE-2.0.txt">Apache License, Version 2.0</a>
+<br>
+</td><td></td>
+</tr>
+<tr>
+<td nowrap="nowrap">com.liferay.portal.tika.jar!apache-mime4j-dom.jar</td><td nowrap="nowrap">0.8.3</td><td nowrap="nowrap"><a href="https://www.apache.org/">Apache James :: Mime4j :: DOM</a></td><td nowrap><a href="https://www.apache.org/licenses/LICENSE-2.0.txt">Apache License, Version 2.0</a>
+<br>
+</td><td></td>
+</tr>
+<tr>
 <td nowrap="nowrap">com.liferay.portal.tika.jar!commons-lang3.jar</td><td nowrap="nowrap">3.12.0</td><td nowrap="nowrap"><a href="https://commons.apache.org/proper/commons-lang/">Apache Commons Lang</a></td><td nowrap><a href="https://www.apache.org/licenses/LICENSE-2.0.txt">Apache License, Version 2.0</a>
 <br>
 </td><td></td>
