LPS-148497 ant build-lib-versions

--- a/lib/versions.html
+++ b/lib/versions.html
@@ -1747,12 +1747,12 @@
 </td><td></td>
 </tr>
 <tr>
-<td nowrap="nowrap">com.liferay.portal.store.gcs.jar!protobuf-java-util.jar</td><td nowrap="nowrap">3.15.6</td><td nowrap="nowrap"><a href="https://developers.google.com/protocol-buffers/">Protocol Buffers [Util]</a></td><td nowrap><a href="https://opensource.org/licenses/BSD-3-Clause">3-Clause BSD License</a>
+<td nowrap="nowrap">com.liferay.portal.store.gcs.jar!protobuf-java-util.jar</td><td nowrap="nowrap">3.16.1</td><td nowrap="nowrap"><a href="https://developers.google.com/protocol-buffers/">Protocol Buffers [Util]</a></td><td nowrap><a href="https://opensource.org/licenses/BSD-3-Clause">3-Clause BSD License</a>
 <br>
 </td><td></td>
 </tr>
 <tr>
-<td nowrap="nowrap">com.liferay.portal.store.gcs.jar!protobuf-java.jar</td><td nowrap="nowrap">3.15.6</td><td nowrap="nowrap"><a href="https://developers.google.com/protocol-buffers/">Protocol Buffers [Core]</a></td><td nowrap><a href="https://opensource.org/licenses/BSD-3-Clause">3-Clause BSD License</a>
+<td nowrap="nowrap">com.liferay.portal.store.gcs.jar!protobuf-java.jar</td><td nowrap="nowrap">3.16.1</td><td nowrap="nowrap"><a href="https://developers.google.com/protocol-buffers/">Protocol Buffers [Core]</a></td><td nowrap><a href="https://opensource.org/licenses/BSD-3-Clause">3-Clause BSD License</a>
 <br>
 </td><td></td>
 </tr>
@@ -1883,6 +1883,11 @@
 </tr>
 <tr>
 <td nowrap="nowrap">com.liferay.portal.tika.jar!poi.jar</td><td nowrap="nowrap">4.1.2</td><td nowrap="nowrap"><a href="http://poi.apache.org/">Apache POI</a></td><td nowrap><a href="http://www.apache.org/licenses/LICENSE-2.0.txt">Apache License, Version 2.0</a>
+<br>
+</td><td></td>
+</tr>
+<tr>
+<td nowrap="nowrap">com.liferay.portal.tika.jar!tagsoup.jar</td><td nowrap="nowrap">1.2.1</td><td nowrap="nowrap"><a href="http://home.ccil.org/~cowan/XML/tagsoup/">TagSoup</a></td><td nowrap><a href="http://www.apache.org/licenses/LICENSE-2.0.txt">Apache License 2.0</a>
 <br>
 </td><td></td>
 </tr>
