--- a/modules/apps/site-initializer/site-initializer-raylife-agent-portal/extra/remote-app/public/index.html
+++ b/modules/apps/site-initializer/site-initializer-raylife-agent-portal/extra/remote-app/public/index.html
@@ -9,10 +9,7 @@
 		<meta content="width=device-width, initial-scale=1" name="viewport" />
 		<meta content="#000000" name="theme-color" />
 
-		<link
-			href="https://cdn.jsdelivr.net/npm/@clayui/css/lib/css/atlas.css"
-			rel="stylesheet"
-		/>
+	<link href="https://cdn.jsdelivr.net/npm/@clayui/css/lib/css/atlas.css" rel="stylesheet" />
 
 		<link href="%PUBLIC_URL%/logo192.png" rel="apple-touch-icon" />
 
