LPS-148670 Update lib versions

--- a/lib/versions.html
+++ b/lib/versions.html
@@ -2513,6 +2513,11 @@
 </td><td></td>
 </tr>
 <tr>
+<td nowrap="nowrap">lib/development/jhighlight.jar</td><td nowrap="nowrap">1.0</td><td nowrap="nowrap"><a href="http://jhighlight.dev.java.net">JHighlight</a></td><td nowrap><a href="http://glassfish.java.net/public/CDDLv1.0.html">CDDL 1.0</a>
+<br>
+</td><td></td>
+</tr>
+<tr>
 <td nowrap="nowrap">lib/development/jndi.jar</td><td nowrap="nowrap">1.2.1</td><td nowrap="nowrap"><a href="http://java.sun.com/products/jndi">Java Naming and Directory Interface</a></td><td nowrap><a href="https://opensource.org/licenses/CDDL-1.0">Common Development and Distribution License 1.0</a>
 <br>
 </td><td></td>
@@ -3048,11 +3053,6 @@
 </tr>
 <tr>
 <td nowrap="nowrap">lib/portal/jersey-common.jar</td><td nowrap="nowrap">2.26</td><td nowrap="nowrap"><a href="https://jersey.github.io/">Jersey core common packages</a></td><td nowrap><a href="https://oss.oracle.com/licenses/CDDL+GPL-1.1">CDDL 1.1</a>
-<br>
-</td><td></td>
-</tr>
-<tr>
-<td nowrap="nowrap">lib/portal/jhighlight.jar</td><td nowrap="nowrap">1.0</td><td nowrap="nowrap"><a href="http://jhighlight.dev.java.net">JHighlight</a></td><td nowrap><a href="http://glassfish.java.net/public/CDDLv1.0.html">CDDL 1.0</a>
 <br>
 </td><td></td>
 </tr>
