LPS-148670 ant build-lib-versions

--- a/lib/versions.html
+++ b/lib/versions.html
@@ -1857,6 +1857,11 @@
 </td><td></td>
 </tr>
 <tr>
+<td nowrap="nowrap">com.liferay.portal.tika.jar!jhighlight.jar</td><td nowrap="nowrap">1.0</td><td nowrap="nowrap"><a href="https://jhighlight.dev.java.net/">JHighlight</a></td><td nowrap><a href="http://www.opensource.org/licenses/lgpl-license.php">LGPL, v2.1 or later</a>
+<br>
+</td><td></td>
+</tr>
+<tr>
 <td nowrap="nowrap">com.liferay.portal.tika.jar!jmatio.jar</td><td nowrap="nowrap">1.2</td><td nowrap="nowrap"><a href="https://github.com/tballison/jmatio">JMatIO</a></td><td nowrap><a href="http://www.linfo.org/bsdlicense.html">BSD</a>
 <br>
 </td><td></td>
