LPS-148460 ant build-lib-versions

--- a/lib/versions.html
+++ b/lib/versions.html
@@ -1872,6 +1872,11 @@
 </td><td></td>
 </tr>
 <tr>
+<td nowrap="nowrap">com.liferay.portal.tika.jar!metadata-extractor.jar</td><td nowrap="nowrap">2.13.0</td><td nowrap="nowrap"><a href="https://drewnoakes.com/code/exif/">metadata-extractor</a></td><td nowrap><a href="http://www.apache.org/licenses/LICENSE-2.0.txt">The Apache Software License, Version 2.0</a>
+<br>
+</td><td></td>
+</tr>
+<tr>
 <td nowrap="nowrap">com.liferay.portal.tika.jar!org.gagravarr.tika.jar</td><td nowrap="nowrap">0.8.LIFERAY-PATCHED-1</td><td nowrap="nowrap">org.gagravarr.tika</td><td nowrap><a href="http://www.gnu.org/licenses/old-licenses/lgpl-2.1.txt">LGPL 2.1</a>
 <br>
 </td><td></td>
@@ -1913,6 +1918,11 @@
 </tr>
 <tr>
 <td nowrap="nowrap">com.liferay.portal.tika.jar!vorbis-java-core.jar</td><td nowrap="nowrap">0.8</td><td nowrap="nowrap"><a href="https://github.com/Gagravarr/VorbisJava">Ogg and Vorbis for Java, Core</a></td><td nowrap><a href="http://www.apache.org/licenses/LICENSE-2.0.txt">The Apache Software License, Version 2.0</a>
+<br>
+</td><td></td>
+</tr>
+<tr>
+<td nowrap="nowrap">com.liferay.portal.tika.jar!xmpcore.jar</td><td nowrap="nowrap">6.0.6</td><td nowrap="nowrap"><a href="https://zerowing.corp.adobe.com/display/granite">XMP Library for Java</a></td><td nowrap><a href="http://www.adobe.com/devnet/xmp/library/eula-xmp-library-java.html">The BSD License</a>
 <br>
 </td><td></td>
 </tr>
