LPS-148671 ant build-lib-versions

--- a/lib/versions.html
+++ b/lib/versions.html
@@ -1867,6 +1867,11 @@
 </td><td></td>
 </tr>
 <tr>
+<td nowrap="nowrap">com.liferay.portal.tika.jar!jna.jar</td><td nowrap="nowrap">4.1.0</td><td nowrap="nowrap"><a href="https://github.com/twall/jna">Java Native Access</a></td><td nowrap><a href="http://www.gnu.org/licenses/licenses.html">LGPL, version 2.1</a>
+<br>
+</td><td></td>
+</tr>
+<tr>
 <td nowrap="nowrap">com.liferay.portal.tika.jar!org.gagravarr.tika.jar</td><td nowrap="nowrap">0.8.LIFERAY-PATCHED-1</td><td nowrap="nowrap">org.gagravarr.tika</td><td nowrap><a href="http://www.gnu.org/licenses/old-licenses/lgpl-2.1.txt">LGPL 2.1</a>
 <br>
 </td><td></td>
