LPS-148577 Run ant build-lib-versions

--- a/lib/versions.html
+++ b/lib/versions.html
@@ -1857,6 +1857,11 @@
 </td><td></td>
 </tr>
 <tr>
+<td nowrap="nowrap">com.liferay.portal.tika.jar!java-libpst.jar</td><td nowrap="nowrap">0.8.1</td><td nowrap="nowrap"><a href="https://code.google.com/p/java-libpst/">java-libpst</a></td><td nowrap><a href="http://www.apache.org/licenses/LICENSE-2.0.txt">The Apache Software License, Version 2.0</a>
+<br>
+</td><td></td>
+</tr>
+<tr>
 <td nowrap="nowrap">com.liferay.portal.tika.jar!jhighlight.jar</td><td nowrap="nowrap">1.0</td><td nowrap="nowrap"><a href="https://jhighlight.dev.java.net/">JHighlight</a></td><td nowrap><a href="http://www.opensource.org/licenses/lgpl-license.php">LGPL, v2.1 or later</a>
 <br>
 </td><td></td>
