LPS-148582 ant build-lib-versions

--- a/lib/versions.html
+++ b/lib/versions.html
@@ -1887,6 +1887,11 @@
 </td><td></td>
 </tr>
 <tr>
+<td nowrap="nowrap">com.liferay.portal.tika.jar!org.mp4parser.jar</td><td nowrap="nowrap">1.9.41.2.LIFERAY-PATCHED-2</td><td nowrap="nowrap">org.mp4parser</td><td nowrap><a href="http://www.gnu.org/licenses/old-licenses/lgpl-2.1.txt">LGPL 2.1</a>
+<br>
+</td><td></td>
+</tr>
+<tr>
 <td nowrap="nowrap">com.liferay.portal.tika.jar!poi-ooxml-schemas.jar</td><td nowrap="nowrap">4.1.2</td><td nowrap="nowrap"><a href="http://poi.apache.org/">Apache POI</a></td><td nowrap><a href="http://www.apache.org/licenses/LICENSE-2.0.txt">Apache License, Version 2.0</a>
 <br>
 </td><td></td>
