LPS-148191 Run ant build-lib-versions

--- a/lib/versions.html
+++ b/lib/versions.html
@@ -2177,6 +2177,16 @@
 </td><td></td>
 </tr>
 <tr>
+<td nowrap="nowrap">com.liferay.shared.dependencies.apache.commons.jar!commons-digester.jar</td><td nowrap="nowrap">1.8.1</td><td nowrap="nowrap"><a href="http://commons.apache.org/digester/">Commons Digester</a></td><td nowrap><a href="http://www.apache.org/licenses/LICENSE-2.0.txt">The Apache Software License, Version 2.0</a>
+<br>
+</td><td></td>
+</tr>
+<tr>
+<td nowrap="nowrap">com.liferay.shared.dependencies.apache.commons.jar!commons-validator.jar</td><td nowrap="nowrap">1.5.1</td><td nowrap="nowrap"><a href="http://commons.apache.org/proper/commons-validator/">Apache Commons Validator</a></td><td nowrap><a href="http://www.apache.org/licenses/LICENSE-2.0.txt">Apache License, Version 2.0</a>
+<br>
+</td><td></td>
+</tr>
+<tr>
 <td nowrap="nowrap">com.liferay.shared.dependencies.netty.jar!netty-buffer.jar</td><td nowrap="nowrap">4.1.72.Final</td><td nowrap="nowrap"><a href="https://netty.io/">Netty/Buffer</a></td><td nowrap><a href="https://www.apache.org/licenses/LICENSE-2.0">Apache License, Version 2.0</a>
 <br>
 </td><td></td>
